ig home image is not centered correctly

--- a/src/components/instagramDisplay.css
+++ b/src/components/instagramDisplay.css
@@ -1,12 +1,23 @@
 #igContainer{
-    padding-top: 5%;
-    width: auto;
+    display: block;
     position: fixed;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    width: 60%;
+    height: 60%;
+    left: 20%;
+    margin: 0;
+    text-align: center;
 }
 
 #igSource{
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    min-height: 1px;
+}
+
+@media (min-height:550px) {
+    #igContainer{
+        top: 60%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
 }
