--- a/src/components/myHeader.css
+++ b/src/components/myHeader.css
@@ -32,7 +32,7 @@
 }
 
 .emailLink{
-    width: 45%;
+    width: 420px;
 }
 
 .emailLink:hover{
