--- a/src/components/myMenu.css
+++ b/src/components/myMenu.css
@@ -19,11 +19,16 @@
 
 
 .innerMenu{
-    position: relative;
-    text-align: center;
-    float: right;
-    width: auto;
+    position: absolute;
+    left: 20%;
+    width: 60%;
 }
+
+.innerContainer{
+    margin-left: 30%;
+
+}
+
 
 .menuOption{
     float: left;
@@ -39,13 +44,16 @@
 }
 
 #menuArchive{
+    min-width: 154px;
 }
 
 #menuBio{
+    min-width: 32px;
     margin-left: 40px;
 }
 
 #menuDownloads{
+    min-width: 101px;
     margin-left: 40px;
 }
 
